--- a/Local.html
+++ b/Local.html
@@ -27,7 +27,7 @@
         <input class="btn" type="submit" value="Submit">
       </form>
 
-      <ul id="users"></ul>
+      <ul id="List of users"></ul>
 
       <!-- <ul class="items">
         <li class="item">Item 1</li>
